issues spacing

--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -387,7 +387,7 @@
         float: left;
         border: 1px #eee solid;
         margin-right: .5em;
-        margin-left: .5em;
+        margin-left: 2.5em;
         margin-bottom: 3em;
         @include mercuryFont(bold, normal)
     }
